RESOLVED FIXED 27822
REGRESSION (r46039): Should restore previous connections-per-host limit for non-http(s) hosts
https://bugs.webkit.org/show_bug.cgi?id=27822
Summary REGRESSION (r46039): Should restore previous connections-per-host limit for n...
Brady Eidson
Reported 2009-07-29 17:18:47 PDT
We should restore previous connections-per-host limit for non-http(s) hosts The change in r46039 to restrict even file urls without exception has broken other WebKit apps, including Adobe's installer (<rdar://problem/7091659>)
Attachments
A fix (1.85 KB, patch)
2009-07-29 17:22 PDT, Brady Eidson
darin: review+
Brady Eidson
Comment 1 2009-07-29 17:22:06 PDT
Created attachment 33756 [details] A fix No layout test, as we haven't yet figured out how reproducibly stress the loader in a reliable and predictable manner to test this class of bug.
Darin Adler
Comment 2 2009-07-29 17:27:04 PDT
Comment on attachment 33756 [details] A fix r=me Does the non-named host limit ever do any good at all? Maybe we should remove the limit entirely for non-named hosts.
Brady Eidson
Comment 3 2009-07-29 17:33:07 PDT
Thanks for the review! The answer to your question is answered by a comment where the hard-coded limit of 20 is established for non-named hosts: // Having a limit might still help getting more important resources first ...which, of course, was the original motivation for the limits in the first place. It's unclear how much of a benefit this limit might be, but it is clear that there is theoretically a benefit.
Brady Eidson
Comment 4 2009-07-29 17:33:57 PDT
Sending ChangeLog Sending loader/loader.cpp Transmitting file data .. Committed revision 46569.
Note You need to log in before you can comment on or make changes to this bug.