2009-07-29  Brady Eidson  <beidson@apple.com>

Reviewed by Darin Adler.

        (REGRESSION: r46039) Should restore previous connections-per-host limit for non-http(s) hosts
        https://bugs.webkit.org/show_bug.cgi?id=27822 and <rdar://problem/7091659>

        * loader/loader.cpp:
        (WebCore::Loader::Host::servePendingRequests): For non-http(s) hosts, restore the previous behavior of
          only limiting connections while parsing and still trying to figure out stylesheet urls.



Canonical link: https://commits.webkit.org/38175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46569 268f45cc-cd09-0410-ab3c-d52691b4dbfc